Export target to enforce correct build order.
The ExternalProject_Add(..) target is not exported otherwise, leading to dependants not being started until after the download and extraction phase has finished.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,10 @@ ExternalProject_Add(rxcpp-6c283f36
   INSTALL_COMMAND ""
 )
 
+# bit hackish: add the externalproject target to the exported targets,
+# so consumers of the headers get build-ordered correctly.
+list(APPEND ${PROJECT_NAME}_EXPORTED_TARGETS rxcpp-6c283f36)
+
 catkin_package(CFG_EXTRAS rxcpp_vendor-extras.cmake)
 
 install(
