--- a/cmake/rxcpp_vendor-extras.cmake.installspace.in
+++ b/cmake/rxcpp_vendor-extras.cmake.installspace.in
@@ -3,4 +3,4 @@ if(_@PROJECT_NAME@_INSTALLSPACE_EXTRA_INCLUDED)
 endif()
 set(_@PROJECT_NAME@_INSTALLSPACE_EXTRA_INCLUDED TRUE)
 
-list(APPEND @PROJECT_NAME@_INCLUDE_DIRS "${@PROJECT_NAME@_DIR}/../../../@CATKIN_GLOBAL_INCLUDE_DESTINATION@/rxcpp/include")
+list(APPEND @PROJECT_NAME@_INCLUDE_DIRS "${@PROJECT_NAME@_DIR}/../../../@CATKIN_GLOBAL_INCLUDE_DESTINATION@/rxcpp_vendor")
